add material ui, add table in user page

--- a/src/theme/_variable.scss
+++ b/src/theme/_variable.scss
@@ -2,3 +2,8 @@ $text: #222;
 
 $primary-color: #69B44A;
 $secondary-color: #f8f8f8;
+
+.primary-button{
+  border-color: $primary-color;
+  color: $primary-color;
+}
