--- a/src/components/Navbar/_navbar.scss
+++ b/src/components/Navbar/_navbar.scss
@@ -2,6 +2,7 @@
   background-color: $secondary-color;
   width: 200px;
   height: 100vh;
+  border-radius: 0 10px 10px 0;
 
   &__logo img{
     width: 100%;
